# Mesh-Subdivisions

./: CMakeLists.txt
head/: subdivision.h
src/: main.cpp
